# ai-research-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml
alembic/: env.py
alembic/versions/: 20250129_0001_001_initial_schema.py
infrastructure/docker/: Dockerfile  docker-compose.yml  init-db.sql
src/aria/: __init__.py  exceptions.py  main.py  types.py
src/aria/api/: __init__.py  app.py  dependencies.py
src/aria/api/routes/: __init__.py  chat.py  documents.py  health.py  protocols.py  search.py
src/aria/config/: __init__.py  settings.py
src/aria/connectors/: __init__.py  aggregator.py  arxiv.py  base.py  pubmed.py  semantic_scholar.py
src/aria/db/: __init__.py  base.py  session.py
src/aria/db/models/: __init__.py  chunk.py  conversation.py  document.py
src/aria/document_processing/: __init__.py  pipeline.py
src/aria/document_processing/extractors/: __init__.py  metadata.py  sections.py
src/aria/document_processing/parsers/: __init__.py  base.py  pdf.py
src/aria/evaluation/: __init__.py  golden_set.py  metrics.py  ragas_eval.py
src/aria/llm/: __init__.py  client.py
src/aria/llm/chains/: __init__.py  literature_qa.py
src/aria/llm/prompts/: __init__.py  rag.py  system.py
src/aria/rag/: __init__.py  pipeline.py
src/aria/rag/chunking/: __init__.py  base.py  semantic.py
src/aria/rag/embedding/: __init__.py  base.py  openai.py
src/aria/rag/reranking/: __init__.py  cross_encoder.py
src/aria/rag/retrieval/: __init__.py  base.py  hybrid.py  keyword.py  semantic.py
src/aria/rag/synthesis/: __init__.py  citation_aware.py
src/aria/storage/: __init__.py
src/aria/storage/vector/: __init__.py  base.py  pgvector.py
src/aria/worker/: __init__.py  celery_app.py
src/aria/worker/tasks/: __init__.py  ingestion.py
tests/: __init__.py  conftest.py
tests/fixtures/golden_set/: literature_qa.json
tests/integration/test_api/: __init__.py
tests/unit/: test_evaluation.py  test_exceptions.py  test_main.py  test_types.py
tests/unit/test_api/: test_app.py  test_chat.py  test_dependencies.py  test_documents.py  test_health.py  test_protocols.py  test_search.py
tests/unit/test_config/: test_settings.py
tests/unit/test_connectors/: __init__.py  test_aggregator.py  test_arxiv.py  test_base.py  test_pubmed.py  test_semantic_scholar.py
tests/unit/test_db/: test_models.py  test_session.py
tests/unit/test_document_processing/: __init__.py  test_extractors.py  test_metadata.py  test_parsers.py  test_pipeline.py  test_sections.py
tests/unit/test_llm/: test_chains.py  test_client.py  test_prompts.py
tests/unit/test_rag/: test_chunking.py  test_embedding.py  test_pipeline.py  test_reranking.py  test_retrieval.py  test_synthesis.py
tests/unit/test_storage/: test_vector_base.py
