[project]
name = "aria-research-assistant"
version = "0.1.0"
description = "Enterprise AI Research Assistant for Life Sciences and Materials Science R&D"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "ARIA Team", email = "aria-team@company.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.4",
    "redis>=5.0.1",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "langchain>=0.1.6",
    "langchain-anthropic>=0.1.1",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.26",
    "pinecone-client>=3.0.0",
    "pypdf>=4.0.1",
    "pdfplumber>=0.10.3",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "celery[redis]>=5.3.6",
    "tiktoken>=0.5.2",
    "sentence-transformers>=2.2.2",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.7",
    "safety>=3.0.1",
    "types-redis>=4.6.0",
]

[project.scripts]
aria = "aria.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aria"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "PL", "RUF", "S", "ANN", "D", "N"]
ignore = [
    "D100", "D104", "D107", "D203", "D213", "D417",  # Docstring style
    "ANN001", "ANN002", "ANN003", "ANN202", "ANN401",  # Type annotations
    "COM812", "ISC001",  # Formatting conflicts
    "S314",  # XML parsing (we parse trusted API responses)
    "PLR0912", "PLR0913",  # Too many branches/arguments
    "PLR2004",  # Magic values in comparisons
    "PLW2901",  # Loop variable overwriting
    "SIM105", "SIM108",  # Ternary and suppress preferences
    "PLC0415",  # Import not at top level (intentional in some cases)
    "C901", "C401",  # Complexity and comprehension style
    "RUF012",  # ClassVar annotations
    "ARG002",  # Unused method arguments (often intentional in interfaces)
    "E501",  # Line too long (handled by formatter)
    "PTH123",  # Path.open preference
    "B007",  # Loop variable not used
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ANN", "ARG", "PLR2004", "PLC0415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "celery.*", "langchain.*", "langgraph.*", "pinecone.*", "pdfplumber.*",
    "ragas.*", "datasets.*", "pgvector.*", "sentence_transformers.*",
    "aiofiles.*", "pypdf.*", "httpx.*", "anthropic.*"
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "aria.connectors.*",
    "aria.db.*",
    "aria.storage.*",
    "aria.rag.*",
    "aria.llm.*",
    "aria.api.routes.*"
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["unit", "integration", "e2e", "slow", "smoke"]
addopts = ["-ra", "-q", "--strict-markers", "-x"]

[tool.coverage.run]
source = ["src/aria"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
targets = ["src"]
# Skip XML parsing warnings - we parse trusted API responses (arXiv, PubMed)
# Skip hardcoded bind address - intentional for development
skips = ["B104", "B405", "B314"]
